--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,28 @@
                 "pattern": "\\bready to start debugging\\b",
                 "uriFormat": "http://localhost:3000/{url-path}"
             }
+        },
+        {
+            "name": "Create 12 sheets",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/main.py",
+            "args": [
+                "2024",
+                "--password",
+                "12345",
+                "--periods",
+                "1,2,3,4,5,6,7,8,9,10,11,12"
+            ],
+            "cwd": "${workspaceFolder}",
+            "stopOnEntry": false,
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bready to start debugging\\b",
+                "uriFormat": "http://localhost:3000/{url-path}"
+            }
         }
     ]
 }
